# therion

./: .clang-tidy  .gitattributes  .gitignore  .travis.yml  BUGS  CHANGES  CMakeLists.txt  CONTRIBUTING.md  Makefile  README  SVG.problems  SYMBOLS.txt  TODO.M  TODO.MS  TODO.S  TODO.SM  Therion.sgp  UPDATES  abisso2th.py  cclass.pl  innosetup.ini.in  install  make_release.py  makearchive.pl  makearchive2.pl  makebinary.pl  makeconvert.pl  makeconvert2.pl  makedepend.pl  makedepend2.pl  makefile.pl  makeinstall.pl  makeinstall.tcl  makelibrary.pl  makerelease.pl  makerelease2.pl  maketest.pl  makeunixify.tcl  pt2pdf.pl  rel_notes.py  (+253 more)
loch/: CMakeLists.txt  Makefile  README  TODO  getvtkver.tcl  icase.cxx  icase.h  icase_equals.h  img.c  img.h  loch.rc  loch.res  loch.xpm  lxAboutDlg.cxx  lxAboutDlg.h  lxData.cxx  lxData.h  lxFNT10x20_bdf.h  lxFNT6x13_bdf.h  lxFNTFreeSans_ttf.h  lxFile.cxx  lxFile.h  lxGLC.cxx  lxGLC.h  lxGLCo.cxx  lxGLCs.cxx  lxGLCx.cxx  lxGLCx.h  lxGUI.cxx  lxGUI.h  lxImgIO.cxx  lxImgIO.h  lxLRUD.cxx  lxLRUD.h  lxMath.cxx  lxMath.h  lxOGLFT.cxx  lxOGLFT.h  lxOptDlg.cxx  lxOptDlg.h  (+31 more)
loch/help/: CMakeLists.txt  Makefile
loch/help/en/: Makefile  loch.chm  loch.hhk  loch.hhp  loch.htb  loch.htm
loch/help/sk/: Makefile  loch.chm  loch.hhc  loch.hhk  loch.hhp  (+2 more)
loch/icons/: about.xpm  camera.xpm  clapperboard.xpm  fit.xpm  fly.xpm  fullscreen.xpm  home.xpm  lockrot.xpm  orto.xpm  persp.xpm  plan.xpm  play.xpm  profile.xpm  reload.xpm  render.xpm  rendersetup.xpm  rotation.xpm  scene.xpm  stereo.xpm  visbbox.xpm  viscline.xpm  visentrance.xpm  visfix.xpm  visinds.xpm  vislabel.xpm  visstation.xpm  vissurface.xpm  viswalls.xpm
loch/locale/: CMakeLists.txt
qtherion/: .gitignore  CMakeLists.txt  linepointmodel.cpp  linepointmodel.h  main.cpp  main.qml  objectitem.h  objectmodel.cpp  objectmodel.h  qtherion.cpp  qtherion.h  qtquickcontrols2.conf  scrapmodel.cpp  scrapmodel.h
samples/: CMakeLists.txt  Makefile  samples.tcl  us.stackdump
samples/areas/: CMakeLists.txt  thconfig  types.pdf.crc  types.th2
samples/basics/: CMakeLists.txt  rabbit-plan.pdf.crc  rabbit-plan.svg.crc  rabbit-plan.xhtml.crc  rabbit-xelev.pdf.crc  rabbit-xelev.svg.crc  rabbit-xelev.xhtml.crc  rabbit.lox.crc  rabbit.th  rabbit.th2  thconfig
samples/cave-list/: CMakeLists.txt  caves.html.crc  thconfig
samples/inputrel/: cave.pdf.crc  thconfig
samples/map-offset/: CMakeLists.txt  cave.th  cave.th2  map1.pdf.crc  map2.pdf.crc  map3.pdf.crc  map4.pdf.crc  map6.pdf.crc  map7.pdf.crc  thconfig.1  thconfig.2  thconfig.3  thconfig.4  thconfig.5  thconfig.6  thconfig.7
samples/morphing/: thconfig.layout
samples/pocket-topo/: CMakeLists.txt  Demo_e.xvi  Demo_p.xvi  cave.3d.crc  cave.lox.crc  cave.plt.crc  cave.xvi.crc  demo.th  demo.th2  thconfig
samples/q-marks/: CMakeLists.txt  centerline.th  clist.html  map.th2  map.xvi  map.xvi.crc  map1.pdf.crc  map2.pdf.crc  map3.pdf.crc  map4.pdf.crc  questions.html.crc  thconfig.1  thconfig.1.layout  thconfig.2
samples/scan/: scan.stl  scan.th  thconfig
samples/survex/: CMakeLists.txt  cave.3d  cave.svx  cave1.pdf.crc  cave1.th  cave2.pdf.crc  cave2.th  thconfig.1  thconfig.2  thconfig.layout
samples/sym-colors/: CMakeLists.txt  cave.pdf.crc  thconfig
samples/u-symbols/: CMakeLists.txt  map.th2  map1.pdf.crc  map2.pdf.crc  map3.pdf.crc  map4.pdf.crc  thconfig.1  thconfig.2
samples/xelevation/: CMakeLists.txt  cave1.th  cave1.th2  cave1.xvi  cave2.th  cave3.th  cave3.th2  map1p.pdf.crc  map1x.pdf.crc  map2.pdf.crc  map3.pdf.crc  map4.pdf.crc  map5.pdf.crc  map6.pdf.crc  map7.pdf.crc  thconfig.1  thconfig.2  thconfig.3  thconfig.4  thconfig.5  thconfig.6  thconfig.7
src/therion-chencdata/: CMakeLists.txt  generate.pl
src/therion-core/: CMakeLists.txt  th2ddataobject.cxx  tharea.cxx  thattr.cxx  thattr.h  thbezier.h  thbuffer.cxx  thbuffer.h  thchenc.cxx  thchenc.h  thcmdline.cxx  thconfig.cxx  thconfig.h  thcs.cxx  thcs.h  thdata.cxx  thdata.h  thdatabase.cxx  thdatabase.h  thdataobject.cxx  thdataobject.h  thdatareader.cxx  thdatareader.h  thdatastation.cxx  thdate.cxx  thdate.h  thdb1d.cxx  thdb1d.h  thdb2d.cxx  thdb2d.h  thdb2d00.cxx  thdb2dab.cxx  thdb2dab.h  thdb2dcp.cxx  thdb2dji.cxx  thdb2dlp.cxx  thdb2dmi.h  thdb2dprj.cxx  thdb2dpt.cxx  thdb2dxs.cxx  (+101 more)
src/therion-librarydata/: CMakeLists.txt  grades.th  layouts.thcfg  thlibrarydata.cxx  thlibrarydata.h  thlibrarydata.thcfg
src/therion-mpost/: CMakeLists.txt  genmpost.pl  therion.mp  thmpost.h  thsymbolsetlist.pl
src/therion-tex/: CMakeLists.txt  gentex.pl  therion.tex  thtex.h
tests/: CMakeLists.txt  Makefile  dbg1.th2  map_2.th2  map_ext.th  map_plan.th  map_plan.th2  tests.tcl  utest-proj.cxx  utest-str.cxx  utest-thdb1d-avgleg.cxx  utest-thlogfile.cxx  utest-thscrapen.cxx  velka_ch.th  velka_ch.th2
tests/_morphing/: test.th  test_xvi.th2  thconfig
tests/_survex/: thconfig
tests/_undefined/: dbg1.th  map_plan.th  map_plan.th2  thconfig  velka_ch.th2
tests/map-offset/: thconfig.1  thconfig.2  thconfig.4  thconfig.layout
tests/svxtst/: cave.3d  cave.svx  cave.th  thcave.3d  thconfig
tests/xelevation/: cave1.th  cave1.xvi  cave2.th  cave3.th  cave3.th2  cave3.xvi  thconfig.1  thconfig.3  thconfig.4  thconfig.5  thconfig.layout
tests/xvitst/: test.th  test.th2  thconfig
thbook/: CMakeLists.txt  Makefile  ch00.tex  ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch07.tex  thbook.tex  xtherion.tex
thbook/etc/: TXSruled.tex  contents.tex  optarg.tex  supp-mis.tex  supp-pdf.tex
thbook/mp/: schema.1  schema.mp  xsect.1  xsect.mp
xtherion/: .gitignore  CMakeLists.txt  Makefile  TODO  about.tcl  app.tcl  bac.tcl  console.tcl  controls.txt  cp.tcl  cp_procs.tcl  ctrl.tcl  dbg.tcl  global.tcl  help.tcl  init.tcl  ivc.tcl  licence.tcl  main.tcl  mapcal.tcl  me.tcl  me_cmds.tcl  me_cmds2.tcl  me_imgs.tcl  me_import.tcl  me_ss.tcl  me_util.tcl  mkall.tcl  msgusr.tcl  msgxth.tcl  mv.tcl  mv_procs.tcl  sbar.tcl  screendump  scroll.tcl  source.tcl  svx_global.tcl  syntax.tcl  te.tcl  te_import.tcl  (+8 more)
xtherion/lang/: process.pl  xtexts.txt  xtexts.txt~
(+485 files in other folders)
